minor css change to make folder view switches align correctly

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -3459,6 +3459,7 @@ i.fa.ps {
 #switches .switch {
 	min-width: 12px;
 	margin-right: 0;
+	vertical-align: top;
 }
 
 #switches .switch:first-child {
